--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
         <header>
+            <img src="img/lambda-black.png" alt="Lambda-logo">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About</a>
