--- a/about.html
+++ b/about.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+    <header>
+        <img class="logo" src="img/jumbo-about.png" alt="Lambda-logo">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">About</a>
+            <a href="#">Products</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
     <div class="container about-page">
      
     About
