--- a/about.html
+++ b/about.html
@@ -12,17 +12,21 @@
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="img/jumbo-about.png" alt="Lambda-logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">About</a>
-            <a href="#">Products</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
+    
     <div class="container about-page">
+        <header>
+            <img class="logo" src="img/lambda-black.png" alt="Lambda-logo">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+        <div class="jumbo-about-jpg">
+            <img src="img/jumbo-about.png" alt="">
+        </div>
      
     About
 
