add dotted border

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       </section>
 
       <div class="top-box">
-        <section>
+        <section class="first-box">
           <img src="img/about-plan.png" alt="strategy" />
 
           <h2>Strategy</h2>
@@ -55,7 +55,7 @@
           <button>Learn More</button>
         </section>
 
-        <section>
+        <section class="second-box">
           <img src="img/about-working.png" alt="strategy" />
 
           <h2>How We Work</h2>
@@ -70,7 +70,7 @@
       </div>
 
       <div class="bottom-box">
-        <section>
+        <section class="third-box">
           <img src="img/about-office.png" alt="strategy" />
 
           <h2>Places We Work</h2>
@@ -83,7 +83,7 @@
           <button>Learn More</button>
         </section>
 
-        <section>
+        <section class="fourth-box">
           <img src="img/about-meeting.png" alt="strategy" />
 
           <h2>Collaboration</h2>
