--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       </div>
 
       <section class="top-section">
-        <h1>About</h1>
+        <h1 class="h1">About</h1>
 
         <p>
           Leverage agile frameworks to provide a robust synopsis for high level
