--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
       </div>
 
       <section class="bottom-section">
-        <h2>Let's Work Together</h2> 
+        <h2 class="bottom-section-h2">Let's Work Together</h2> 
         
         <p>
           Leverage agile frameworks to provide a robust
