aligned paragraphs on boxes

--- a/about.html
+++ b/about.html
@@ -47,12 +47,12 @@
 
           <h2>Strategy</h2>
 
-          <p>
+          <p class="p-box">
             Iterative approaches to corporate strategy foster collaborative
             thinking to further the overall value proposition.
           </p>
 
-          <button>Learn More</button>
+          <button class="b-box">Learn More</button>
         </section>
 
         <section class="second-box">
@@ -60,12 +60,12 @@
 
           <h2>How We Work</h2>
 
-          <p>
+          <p class="p-box">
             Iterative approaches to corporate strategy foster collaborative
             thinking to further the overall value proposition.
           </p>
 
-          <button>Learn More</button>
+          <button class="b-box">Learn More</button>
         </section>
       </div>
 
@@ -75,12 +75,12 @@
 
           <h2>Places We Work</h2>
 
-          <p>
+          <p class="p-box">
             Iterative approaches to corporate strategy foster collaborative
             thinking to further the overall value proposition.
           </p>
 
-          <button>Learn More</button>
+          <button class="b-box">Learn More</button>
         </section>
 
         <section class="fourth-box">
@@ -88,12 +88,12 @@
 
           <h2>Collaboration</h2>
 
-          <p>
+          <p class="p-box">
             Iterative approaches to corporate strategy foster collaborative
             thinking to further the overall value proposition.
           </p>
 
-          <button>Learn More</button>
+          <button class="b-box">Learn More</button>
         </section>
       </div>
 
